force-app/main/default/objects/SurveyInvitation/fields/IsLoggedIn__c.field-meta.xml
<CustomField>
    <fullName>IsLoggedIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLoggedIn</label>
    <type>Checkbox</type>
</CustomField>