force-app/main/default/objects/SurveyInvitation/fields/MessagingSession__c.field-meta.xml
<CustomField>
    <fullName>MessagingSession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MessagingSession</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>