force-app/main/default/objects/SurveyInvitation/fields/NKS_Participants_Percentage__c.field-meta.xml
<CustomField>
    <fullName>NKS_Participants_Percentage__c</fullName>
    <label>Participants Percentage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>