force-app/main/default/objects/SurveyInvitation/fields/NKS_Survey_Unit__c.field-meta.xml
<CustomField>
    <fullName>NKS_Survey_Unit__c</fullName>
    <label>Survey Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>